--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "ag-grid-community": "^26.2.0",
     "ag-grid-react": "^26.2.0",
     "date-fns": "^2.27.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.38.1",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
