--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
     "save": "^2.4.0",
+    "serve": "^13.0.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev":"react-script start",
+    "start": "serve-s build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": [
