--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "dev":"react-script start",
+    "dev":"react-scripts start",
     "start": "serve-s build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
