--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ag-grid-community": "^26.2.0",
     "ag-grid-react": "^26.2.0",
     "date-fns": "^2.27.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.1",
@@ -23,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "save": "^2.4.0",
     "serve": "^13.0.2",
     "web-vitals": "^1.1.2"
@@ -31,7 +33,7 @@
     "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --enc=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
   },
